favicon, og tags, fix for horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	color: #3a3f52;
+	overflow-x: hidden;
 }
 
 h2 {
